--- a/style.css
+++ b/style.css
@@ -309,7 +309,29 @@ nav {
 }
 /* ABOUT */
 
+/* MAPS */
 
+h2{
+  text-align: center;
+  font-size: 3rem;
+  font-weight: 800;
+  font-family: var(--header-font);
+  color: var(--text-dark);
+}
+
+.maps{
+  text-align: center;
+  width: 95%;
+  margin: auto;
+}
+
+iframe{
+  width: 100%;
+  height: 300px;
+  border-radius: 10px;
+  margin: 20px 0 20px 0;
+  
+}
 @media (width > 480px) {
   .about__grid {
     grid-template-columns: repeat(2, 1fr);
