--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@
   box-sizing: border-box;
 }
 
+.judul-nav{
+  color: #f6ac0f;
+}
+
 .section__container {
   max-width: var(--max-width);
   margin: auto;
@@ -271,6 +275,14 @@ nav {
   text-align: center;
 }
 
+.about__card-1{
+  height: 100%;
+  padding: 2rem;
+  display: grid;
+  place-content: center;
+  text-align: center;
+}
+
 .about__card span{
   margin-bottom: 1rem;
   font-size: 3rem;
@@ -307,7 +319,6 @@ nav {
 .about__content .section__description{
   margin-bottom: 2rem;
 }
-/* ABOUT */
 
 /* MAPS */
 
@@ -323,15 +334,16 @@ h2{
   text-align: center;
   width: 95%;
   margin: auto;
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
 
 iframe{
   width: 100%;
   height: 300px;
-  border-radius: 10px;
-  margin: 20px 0 20px 0;
-  
+
 }
+
 @media (width > 480px) {
   .about__grid {
     grid-template-columns: repeat(2, 1fr);
@@ -467,6 +479,7 @@ img {
 
 .room__container {
   padding-block: 5rem;
+  height: 650px;
 }
 
 .room__container :is(.section__subheader, .section__header) {
@@ -568,6 +581,7 @@ img {
 
 .footer {
   background-color: var(--primary-color);
+  height: 450px;
 }
 
 .footer__container {
@@ -661,4 +675,5 @@ img {
   font-size: 0.8rem;
   color: var(--text-light);
   text-align: center;
+  font-weight: bold;
 }
